// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Build distribution should have a predictable ephemeral navigation based on route configuration: GUI routes expected covered, missing routes 1`] = `
[
  {
    "coverage": "TRUE",
    "path": "/openshift",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/OpenShift Container Platform",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/openshift-container",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/container",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/platform",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/shift",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/openshift-dedicated",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/dedicated",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/OpenShift-metrics",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/metrics",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "TRUE",
    "path": "/rhacs",
    "productGroup": [
      "rhacs",
    ],
    "productId": [
      "rhacs",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/advanced",
    "productGroup": [
      "rhacs",
    ],
    "productId": [
      "rhacs",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/cluster",
    "productGroup": [
      "rhacs",
    ],
    "productId": [
      "rhacs",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/security",
    "productGroup": [
      "rhacs",
    ],
    "productId": [
      "rhacs",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/kubernetes",
    "productGroup": [
      "rhacs",
    ],
    "productId": [
      "rhacs",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/acs",
    "productGroup": [
      "rhacs",
    ],
    "productId": [
      "rhacs",
    ],
    "productVariants": [],
  },
  {
    "coverage": "TRUE",
    "path": "/rhel",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/insights",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/enterprise",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/linux",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/el",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/x86",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/ibm",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/power",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/sat",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/server",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/capsule",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "TRUE",
    "path": "/rhods",
    "productGroup": [
      "rhods",
    ],
    "productId": [
      "rhods",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/data",
    "productGroup": [
      "rhods",
    ],
    "productId": [
      "rhods",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/science",
    "productGroup": [
      "rhods",
    ],
    "productId": [
      "rhods",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/ods",
    "productGroup": [
      "rhods",
    ],
    "productId": [
      "rhods",
    ],
    "productVariants": [],
  },
  {
    "coverage": "TRUE",
    "path": "/streams",
    "productGroup": [
      "rhosak",
    ],
    "productId": [
      "rhosak",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/application-services",
    "productGroup": [
      "rhosak",
    ],
    "productId": [
      "rhosak",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/rhosak",
    "productGroup": [
      "rhosak",
    ],
    "productId": [
      "rhosak",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/apache",
    "productGroup": [
      "rhosak",
    ],
    "productId": [
      "rhosak",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/kafka",
    "productGroup": [
      "rhosak",
    ],
    "productId": [
      "rhosak",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/rosa",
    "productGroup": [
      "rosa",
    ],
    "productId": [
      "rosa",
    ],
    "productVariants": [],
  },
]
`;

exports[`Build distribution should have a predictable ephemeral navigation based on route configuration: YAML routes expected covered, missing routes 1`] = `
[
  {
    "coverage": "TRUE",
    "path": "/rhel",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "TRUE",
    "path": "/openshift",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
    ],
    "productVariants": [],
  },
  {
    "coverage": "TRUE",
    "path": "/streams",
    "productGroup": [
      "rhosak",
    ],
    "productId": [
      "rhosak",
    ],
    "productVariants": [],
  },
  {
    "coverage": "TRUE",
    "path": "/rhods",
    "productGroup": [
      "rhods",
    ],
    "productId": [
      "rhods",
    ],
    "productVariants": [],
  },
  {
    "coverage": "TRUE",
    "path": "/rhacs",
    "productGroup": [
      "rhacs",
    ],
    "productId": [
      "rhacs",
    ],
    "productVariants": [],
  },
]
`;

exports[`Build distribution should match a specific file output 1`] = `
[
  "",
  "./dist/css/109*css",
  "./dist/css/334*css",
  "./dist/css/506*css",
  "./dist/css/840*css",
  "./dist/css/exposed-./RootApp*css",
  "./dist/fed-mods.json",
  "./dist/fonts/graph2x.png",
  "./dist/fonts/graph4x.png",
  "./dist/js/109*js",
  "./dist/js/109*txt",
  "./dist/js/128*js",
  "./dist/js/143*js",
  "./dist/js/155*js",
  "./dist/js/205*js",
  "./dist/js/216*js",
  "./dist/js/224*js",
  "./dist/js/294*js",
  "./dist/js/294*txt",
  "./dist/js/334*js",
  "./dist/js/353*js",
  "./dist/js/355*js",
  "./dist/js/362*js",
  "./dist/js/386*js",
  "./dist/js/457*js",
  "./dist/js/624*js",
  "./dist/js/624*txt",
  "./dist/js/655*js",
  "./dist/js/669*js",
  "./dist/js/669*txt",
  "./dist/js/68*js",
  "./dist/js/683*js",
  "./dist/js/707*js",
  "./dist/js/707*txt",
  "./dist/js/745*js",
  "./dist/js/77*js",
  "./dist/js/774*js",
  "./dist/js/774*txt",
  "./dist/js/816*js",
  "./dist/js/840*js",
  "./dist/js/891*js",
  "./dist/js/935*js",
  "./dist/js/935*txt",
  "./dist/js/961*js",
  "./dist/js/993*js",
  "./dist/js/App*js",
  "./dist/js/exposed-./RootApp*js",
  "./dist/locales/en-US.json",
  "./dist/locales/en.json",
  "./dist/locales/locales.json",
  "./dist/sourcemaps/109*map",
  "./dist/sourcemaps/128*map",
  "./dist/sourcemaps/143*map",
  "./dist/sourcemaps/155*map",
  "./dist/sourcemaps/216*map",
  "./dist/sourcemaps/294*map",
  "./dist/sourcemaps/334*map",
  "./dist/sourcemaps/353*map",
  "./dist/sourcemaps/355*map",
  "./dist/sourcemaps/362*map",
  "./dist/sourcemaps/386*map",
  "./dist/sourcemaps/457*map",
  "./dist/sourcemaps/624*map",
  "./dist/sourcemaps/655*map",
  "./dist/sourcemaps/669*map",
  "./dist/sourcemaps/68*map",
  "./dist/sourcemaps/683*map",
  "./dist/sourcemaps/707*map",
  "./dist/sourcemaps/77*map",
  "./dist/sourcemaps/774*map",
  "./dist/sourcemaps/816*map",
  "./dist/sourcemaps/840*map",
  "./dist/sourcemaps/891*map",
  "./dist/sourcemaps/935*map",
  "./dist/sourcemaps/961*map",
  "./dist/sourcemaps/993*map",
  "./dist/sourcemaps/App*map",
  "./dist/sourcemaps/exposed-./RootApp*map",
  "./dist/subscriptions*js",
]
`;
